path socket server actualizado

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
-        const socket = io('http://localhost:8080');
+        const socket = io('https://react-server-socketio.herokuapp.com/');
 
         const formulario = document.querySelector('#miForm');
         const mensajes = document.querySelector('#misMensajes');
